--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "cypress open"
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^6.0.3",
     "@angular-material-extensions/select-country": "^5.0.1",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.6",
@@ -23,13 +25,17 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^4.5.0",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
+    "bootstrap": "^4.6.0",
+    "chance": "^1.1.8",
     "g": "^2.0.1",
     "intl-tel-input": "^17.0.13",
     "libphonenumber-js": "^1.9.34",
     "mdb-angular-ui-kit": "^1.2.0",
+    "moment": "^2.29.1",
     "ng2-tel-input": "^2.3.0",
     "ngx-flag-picker": "^11.1.1",
+    "open-iconic": "^1.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -38,8 +44,10 @@
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
+    "@briebug/cypress-schematic": "^5.0.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "cypress": "^8.5.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
