--- a/angular.json
+++ b/angular.json
@@ -96,8 +96,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.scss",
+              "./src/scss/styles.scss",
               "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "node_modules/intl-tel-input/build/js/intlTelInput.min.js"
             ],
